@@ -1,3 +1,8 @@
+2014-11-04  Richard Biener  <rguenther@suse.de>
+
+	* c-common.c (shorten_compare): Do not shorten mixed
+	DFP and non-DFP compares.
+
 2014-11-01  Edward Smith-Rowland  <3dw4rd@verizon.net>
 
 	* g++.dg/cpp1y/feat-cxx11.C: Commentary and rearrangement of tests.
